--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,9 +1,9 @@
 dependencies {
+    // jpa
+    api 'org.springframework.boot:spring-boot-starter-data-jpa'
+
     // Spring Boot
     implementation 'org.springframework.boot:spring-boot-starter-web'
-
-    // jpa
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
     // p6spy
     implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.7'
