[feat] : 개발환경 구성중

--- a/app/app-api-server/src/main/resources/application.yml
+++ b/app/app-api-server/src/main/resources/application.yml
@@ -15,7 +15,10 @@ spring:
   jpa:
     hibernate:
       ddl-auto: none
-
+  ## jasypt
+  jasypt:
+    encryptor:
+      password: RknSA3#jkDS34*bkj$j3kl12@#
 ---
 spring:
   config:
