[chore] : 모듈 구조 변경
- 모듈 구조를 app/app-api-server 에서 app-api-server 부분을 상위모듈로 변경
- domain 모듈을 core 모듈로 이동

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,6 @@
 rootProject.name = 'justshop'
-include 'app'
 include 'clients'
 include 'common'
-include 'domain'
-include 'app:app-api-server'
-findProject(':app:app-api-server')?.name = 'app-api-server'
+include 'core'
+include 'api-server'
 
