--- a/api-server/build.gradle
+++ b/api-server/build.gradle
@@ -18,6 +18,9 @@ dependencies {
 
     // modules
     implementation project(':core')
+
+    // modules - test fixtures
+    testImplementation(testFixtures(project(":core")))
 }
 
 ext { // 전역 변수
