--- a/api-server/src/main/resources/application.yml
+++ b/api-server/src/main/resources/application.yml
@@ -1,6 +1,13 @@
+#spring:
+#  profiles:
+#    include: core
+
 spring:
   profiles:
     default: local
+
+  jackson:
+    property-naming-strategy: SNAKE_CASE
 
   output:
     ansi:
@@ -25,7 +32,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create
-    show-sql: true
+#    show-sql: true
     properties:
       hibernate:
         format_sql: true
@@ -46,7 +53,6 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create
-    show-sql: true
     properties:
       hibernate:
         format_sql: true
