--- a/api-server/build.gradle
+++ b/api-server/build.gradle
@@ -18,6 +18,8 @@ dependencies {
 
     // modules
     implementation project(':core')
+    implementation project(':common')
+    implementation project(':clients')
 
     // modules - test fixtures
     testImplementation(testFixtures(project(":core")))
