--- a/module-app/member-service/src/main/resources/application.yml
+++ b/module-app/member-service/src/main/resources/application.yml
@@ -16,12 +16,13 @@ spring:
     password:
 
   jpa:
+    open-in-view: false
     hibernate:
-      ddl-auto: create-drop
-      show-sql: true
+      ddl-auto: create
     properties:
       hibernate:
         format_sql: true
+        show_sql: true
     # (2.5~) Hibernate 초기화 이후 data.sql 실행, 테스트 데이터 넣을 때 넣는 옵션
     defer-datasource-initialization: true
 
