--- a/module-app/order-service/build.gradle
+++ b/module-app/order-service/build.gradle
@@ -26,6 +26,7 @@ dependencies {
 
     // kafka
     implementation 'org.springframework.kafka:spring-kafka'
+    implementation 'org.springframework.kafka:spring-kafka-test'
 
     // rest docs
     asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'
