--- a/module-app/member-service/src/main/resources/application.yml
+++ b/module-app/member-service/src/main/resources/application.yml
@@ -2,6 +2,23 @@ server:
   port: 8083
 
 spring:
+  application:
+    name: member-service
+
+  cloud:
+    config:
+      name: member-service
+  config:
+    import: optional:configserver:http://localhost:8888
+    refresh:
+      extra-refreshable: com.zaxxer.hikari.HikariDataSource
+
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: guest
+    password: guest
+
   output:
     ansi:
       enabled: always
@@ -27,7 +44,22 @@ spring:
     console:
       enabled: true
       settings:
-        web-allow-others: true  # 추가
+        web-allow-others: true
+
+  eureka:
+    instance:
+      instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+    client:
+      register-with-eureka: true
+      fetch-registry: true
+      service-url:
+        defaultZone: http://localhost:8761/eureka
+
+  management:
+    endpoints:
+      web:
+        exposure:
+          include: refresh, health, beans, busrefresh, info, metrics, prometheus
 
 token:
   expiration_time: 86400000
