--- a/module-app/payment-service/src/main/resources/application.yml
+++ b/module-app/payment-service/src/main/resources/application.yml
@@ -2,12 +2,20 @@ server:
   port: 8085
 
 spring:
-  jackson:
-    property-naming-strategy: SNAKE_CASE
+  application:
+    name: payment-service
 
   output:
     ansi:
       enabled: always
+
+  cloud:
+    config:
+      name: payment-service
+  config:
+    import: optional:configserver:http://localhost:8888
+    refresh:
+      extra-refreshable: com.zaxxer.hikari.HikariDataSource
 
   datasource:
     url: jdbc:h2:mem:~/justShopApplication
@@ -32,6 +40,17 @@ spring:
       settings:
         web-allow-others: true  # 추가
 
-token:
-  expiration_time: 86400000
-  secret: springboot_my_json_web_token_default
+  eureka:
+    instance:
+      instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+    client:
+      register-with-eureka: true
+      fetch-registry: true
+      service-url:
+        defaultZone: http://localhost:8761/eureka
+
+  management:
+    endpoints:
+      web:
+        exposure:
+          include: refresh, health, beans, busrefresh, info, metrics, prometheus
