--- a/module-app/point-service/build.gradle
+++ b/module-app/point-service/build.gradle
@@ -16,6 +16,18 @@ dependencies {
     // actuator
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
+    // eureka client
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+
+    // spring cloud config
+    implementation 'org.springframework.cloud:spring-cloud-starter-config'
+
+    // spring cloud bus amqp
+    implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
+
+    // prometheus
+    implementation 'io.micrometer:micrometer-registry-prometheus'
+
     // kafka
     implementation 'org.springframework.kafka:spring-kafka'
 
@@ -26,7 +38,14 @@ dependencies {
 }
 
 ext { // 전역 변수
+    set('springCloudVersion', "2021.0.8")
     snippetsDir = file('build/generated-snippets')
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
 }
 
 test {
