[fix] : 카테고리 서비스 애플리케이션 로딩 안되는 문제 해결

--- a/module-app/category-service/src/test/resources/application.yml
+++ b/module-app/category-service/src/test/resources/application.yml
@@ -3,6 +3,9 @@ spring:
     ansi:
       enabled: always
   config:
+    import: optional:configserver:http://localhost:8888
+    refresh:
+      extra-refreshable: com.zaxxer.hikari.HikariDataSource
     activate:
       on-profile: test
 
