--- a/module-app/payment-service/build.gradle
+++ b/module-app/payment-service/build.gradle
@@ -63,7 +63,7 @@ asciidoctor { // asciidoctor 작업 구성
     }
 
     doFirst {
-        delete "src/main/resources/static/docs/user-index.html"
+        delete "src/main/resources/static/docs/payment-index.html"
     }
 
     baseDirFollowsSourceFile()	// 다른 adoc 파일을 include 할 때 경로를 baseDir로 맞춘다.
@@ -75,11 +75,7 @@ task copyAsciidoc(type: Copy) {
     into "src/main/resources/static/docs"
     include "index.html"
     destinationDir file("src/main/resources/static/docs/")
-    rename "index.html", "member-index.html"
-
-    doFirst {
-        delete "src/main/resources/static/docs/user-index.html"
-    }
+    rename "index.html", "payment-index.html"
     dependsOn asciidoctor
 }
 
