--- a/module-app/product-service/build.gradle
+++ b/module-app/product-service/build.gradle
@@ -73,7 +73,7 @@ asciidoctor { // asciidoctor 작업 구성
     }
 
     doFirst {
-        delete "src/main/resources/static/docs/user-index.html"
+        delete "src/main/resources/static/docs/product-index.html"
     }
 
     baseDirFollowsSourceFile()	// 다른 adoc 파일을 include 할 때 경로를 baseDir로 맞춘다.
@@ -85,10 +85,10 @@ task copyAsciidoc(type: Copy) {
     into "src/main/resources/static/docs"
     include "index.html"
     destinationDir file("src/main/resources/static/docs/")
-    rename "index.html", "member-index.html"
+    rename "index.html", "product-index.html"
 
     doFirst {
-        delete "src/main/resources/static/docs/user-index.html"
+        delete "src/main/resources/static/docs/product-index.html"
     }
     dependsOn asciidoctor
 }
