--- a/module-app/order-service/build.gradle
+++ b/module-app/order-service/build.gradle
@@ -70,7 +70,7 @@ asciidoctor { // asciidoctor 작업 구성
     }
 
     doFirst {
-        delete "src/main/resources/static/docs/user-index.html"
+        delete "src/main/resources/static/docs/order-index.html"
     }
 
     baseDirFollowsSourceFile()	// 다른 adoc 파일을 include 할 때 경로를 baseDir로 맞춘다.
@@ -82,11 +82,7 @@ task copyAsciidoc(type: Copy) {
     into "src/main/resources/static/docs"
     include "index.html"
     destinationDir file("src/main/resources/static/docs/")
-    rename "index.html", "member-index.html"
-
-    doFirst {
-        delete "src/main/resources/static/docs/user-index.html"
-    }
+    rename "index.html", "order-index.html"
     dependsOn asciidoctor
 }
 
