--- a/module-app/product-service/src/main/resources/application-test.yml
+++ b/module-app/product-service/src/main/resources/application-test.yml
@@ -2,24 +2,41 @@ spring:
   output:
     ansi:
       enabled: always
+
   config:
     activate:
       on-profile: test
+
   datasource:
     url: jdbc:h2:mem:~/justShopApplication
     driver-class-name: org.h2.Driver
     username: sa
     password:
 
-  jpa:
-    hibernate:
-      ddl-auto: create-drop
+  cloud:
+    config:
+      enabled: false
 
+  jpa:
+    open-in-view: false
+    defer-datasource-initialization: true
+    hibernate:
+      ddl-auto: create
     properties:
       hibernate:
         format_sql: true
         show_sql: true
-        default_batch_fetch_size: 1000
+        default_batch_fetch_size: 500
+
   sql:
     init:
       mode: never
+
+eureka:
+  instance:
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+  client:
+    register-with-eureka: false
+    fetch-registry: false
+    service-url:
+      defaultZone: http://localhost:8761/eureka
