[test] : 상품조회 기능 Service Layer 테스트 작성

--- a/module-app/member-service/src/main/resources/application.yml
+++ b/module-app/member-service/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   profiles:
-    default: local
+    default: dev
 
   application:
-    name: product-service
+    name: member-service
 
   output:
     ansi:
