--- a/module-domain/domain-point/build.gradle
+++ b/module-domain/domain-point/build.gradle
@@ -2,4 +2,7 @@ dependencies {
     // h2
     runtimeOnly 'com.h2database:h2'
     testImplementation 'com.h2database:h2'
+
+    // mysql
+    runtimeOnly 'com.mysql:mysql-connector-j'
 }
