--- a/module-app/delivery-service/src/main/resources/application.yml
+++ b/module-app/delivery-service/src/main/resources/application.yml
@@ -1,7 +1,10 @@
 server:
-  port: 8082
+  port: 0
 
 spring:
+  profiles:
+    default: dev
+
   application:
     name: delivery-service
 
@@ -9,47 +12,20 @@ spring:
     ansi:
       enabled: always
 
-  cloud:
-    config:
-      name: delivery-service
-  config:
-    import: optional:configserver:http://localhost:8888
-    refresh:
-      extra-refreshable: com.zaxxer.hikari.HikariDataSource
-
   datasource:
-    url: jdbc:h2:mem:~/justShopApplication
     driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:~/justShopApplication
     username: sa
     password:
-
-  jpa:
-    open-in-view: false
-    hibernate:
-      ddl-auto: create
-    properties:
-      hibernate:
-        format_sql: true
-        show_sql: true
-    # (2.5~) Hibernate 초기화 이후 data.sql 실행, 테스트 데이터 넣을 때 넣는 옵션
-    defer-datasource-initialization: true
 
   h2:
     console:
       enabled: true
       settings:
-        web-allow-others: true  # 추가
-  eureka:
-    instance:
-      instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
-    client:
-      register-with-eureka: true
-      fetch-registry: true
-      service-url:
-        defaultZone: http://localhost:8761/eureka
+        web-allow-others: true
 
-  management:
-    endpoints:
-      web:
-        exposure:
-          include: refresh, health, beans, busrefresh, info, metrics, prometheus
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh, health, beans, busrefresh, info, metrics, prometheus
