--- a/module-app/member-service/src/main/resources/application-test.yml
+++ b/module-app/member-service/src/main/resources/application-test.yml
@@ -1,3 +1,6 @@
+server:
+  port: 8083
+
 spring:
   output:
     ansi:
@@ -8,8 +11,8 @@ spring:
       on-profile: test
 
   datasource:
-    url: jdbc:h2:mem:~/justShopApplication
     driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:~/justShopApplication
     username: sa
     password:
 
@@ -40,3 +43,8 @@ eureka:
     fetch-registry: false
     service-url:
       defaultZone: http://localhost:8761/eureka
+
+kafka:
+  bootstrap:
+    server:
+      config: 127.0.0.1:9092
