[chore] : Dockerfile 수정

--- a/module-app/member-service/Dockerfile
+++ b/module-app/member-service/Dockerfile
@@ -1,5 +1,5 @@
 FROM adoptopenjdk/openjdk11
 VOLUME /tmp
-COPY build/libs/member-service-1.0.jar member-service.jar
+#COPY build/libs/member-service-1.0.jar member-service.jar
 ENTRYPOINT ["java", "-jar", "member-service.jar"]
 
