--- a/module-app/member-service/Dockerfile
+++ b/module-app/member-service/Dockerfile
@@ -1,5 +1,5 @@
 FROM adoptopenjdk/openjdk11
 VOLUME /tmp
-#COPY member-service.jar member-service.jar
+COPY member-service.jar member-service.jar
 ENTRYPOINT ["java", "-jar", "member-service.jar"]
 
