--- a/module-internal/build.gradle
+++ b/module-internal/build.gradle
@@ -6,6 +6,36 @@ project(':module-internal:core-web') {
     }
 }
 
+project(':module-internal:member-client') {
+    bootJar.enabled = false
+
+    dependencies {
+        implementation project(':module-core')
+        implementation project(':module-internal:core-web')
+
+    }
+}
+
+project(':module-internal:coupon-client') {
+    bootJar.enabled = false
+
+    dependencies {
+        implementation project(':module-core')
+        implementation project(':module-internal:core-web')
+
+    }
+}
+
+project(':module-internal:product-client') {
+    bootJar.enabled = false
+
+    dependencies {
+        implementation project(':module-core')
+        implementation project(':module-internal:core-web')
+
+    }
+}
+
 bootJar {
     enabled = false
 }
