[chore] : order-client bootJar 수정, actuator 엔드포인트 설정 정보 변경

--- a/module-app/member-service/src/main/resources/application-dev.yml
+++ b/module-app/member-service/src/main/resources/application-dev.yml
@@ -42,3 +42,9 @@ kafka:
   bootstrap:
     server:
       config: 127.0.0.1:9092
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh, health, beans, busrefresh, info, metrics, prometheus
