[test] : Service Layer 스프링 컨테이너 환경 통합

--- a/module-app/member-service/src/main/resources/application-prod.yml
+++ b/module-app/member-service/src/main/resources/application-prod.yml
@@ -1,8 +1,9 @@
 spring:
   config:
     import: optional:configserver:http://config-service:8888
-    activate:
+    active:
       on-profile: prod
+
   cloud:
     config:
       name: member-service
