--- a/module-app/product-service/src/main/resources/application-dev.yml
+++ b/module-app/product-service/src/main/resources/application-dev.yml
@@ -25,20 +25,16 @@ spring:
       hibernate:
         format_sql: true
         show_sql: true
-        default_batch_fetch_size: 500
+#        default_batch_fetch_size: 500
 
   sql:
     init:
       mode: never
 
 eureka:
-  instance:
-    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
   client:
     register-with-eureka: false
     fetch-registry: false
-    service-url:
-      defaultZone: http://localhost:8761/eureka
 
 kafka:
   bootstrap:
