--- a/module-app/category-service/src/main/resources/application.yml
+++ b/module-app/category-service/src/main/resources/application.yml
@@ -1,16 +1,12 @@
-server:
-  port: 0
-
 spring:
-  profiles:
-    default: dev
-
-  application:
-    name: category-service
-
   output:
     ansi:
       enabled: always
+  profiles:
+    active: dev
+
+  application:
+    name: category-service
 
   datasource:
     driver-class-name: org.h2.Driver
@@ -23,9 +19,3 @@ spring:
       enabled: true
       settings:
         web-allow-others: true
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: refresh, health, beans, busrefresh, info, metrics, prometheus
