--- a/module-app/order-service/src/main/resources/application-dev.yml
+++ b/module-app/order-service/src/main/resources/application-dev.yml
@@ -15,6 +15,8 @@ spring:
   cloud:
     config:
       enabled: false
+    refresh:
+      extra-refreshable: com.zaxxer.hikari.HikariDataSource
 
   jpa:
     open-in-view: false
@@ -40,3 +42,9 @@ kafka:
   bootstrap:
     server:
       config: 127.0.0.1:9092
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh, health, beans, busrefresh, info, metrics, prometheus
