--- a/module-app/delivery-service/build.gradle
+++ b/module-app/delivery-service/build.gradle
@@ -32,6 +32,9 @@ dependencies {
     asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
     testImplementation 'org.springframework.security:spring-security-test'
+
+    // kafka
+    implementation 'org.springframework.kafka:spring-kafka'
 }
 
 ext { // 전역 변수
