[feat] : 주문생성 이벤트 메세지를 받아 배송정보 생성 기능 구현

--- a/module-app/build.gradle
+++ b/module-app/build.gradle
@@ -5,6 +5,7 @@ project(':module-app:member-service') {
         implementation project(':module-domain:domain-member')
         implementation project(':module-core')
         implementation project(':module-internal:core-web')
+        implementation project(':module-internal:member-client')
     }
 }
 
